# EPIC_scraper

./: .gitignore  README.md  pyproject.toml  test_normalizer.py
data/: mbe_data_2023_06_08.xlsx  mbe_data_2023_06_12.xlsx  mbe_data_2023_06_16.xlsx  mbe_data_2023_06_20.xlsx  mbe_data_2023_06_25.xlsx  mbe_data_2023_06_26.xlsx  mbe_data_2023_06_27.xlsx
data/2023_06_08/: Ba.PID.MV.txt  Ba.PID.OP.txt  GC Atmion.PG.MV.txt  GC IG.PG.MV.txt  GC IGd.PG.MV.txt  Ga.PID.MV.txt  Ga.PID.wOP.txt  GaHL.PID.MV.txt  GaHL.PID.wOP.txt  GeO.PID.MV.txt  GeO.PID.wOP.txt  GeOHL.PID.MV.txt  GeOHL.PID.wOP.txt  In.PID.MV.txt  In.PID.wOP.txt  InHL.PID.MV.txt  InHL.PID.wOP.txt  LL IG.PG.MV.txt  La.PID.MV.txt  La.PID.wOP.txt  MC IG.PG.MV.txt  MC.PID.MV.txt  MC.PID.wOP.txt  MIG.PG.EC.txt  MIG.PG.GS.txt  MIG.PG.HST.txt  MIG.PG.IT.txt  MIG.PG.ITP.txt  MIG.PG.MV.txt  Messages.txt  N.MF.MV.txt  O.Forward.MV.txt  O.Light.MV.txt  O.MF.MV.txt  O.Reflect.MV.txt  QMB.PID.MV.txt  QMB.PID.wOP.txt  Shutters.txt  SiO.PID.MV.txt  SiO.PID.wOP.txt  (+10 more)
data/2023_06_12/: Messages.txt
data/2023_06_16/: Messages.txt
data/2023_06_26/: Messages.txt
data/2023_06_27/: Messages.txt
epicfileimport/: __init___.py
src/epic_scraper/epicfileimport/: epic_module.py
